Fixed Icon Spacing for Mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -27,7 +27,7 @@ input.search-query {}
 
 body {overflow-x: hidden;}
 .navbar .brand {width: 300px; padding: 10px 0 4px; line-height: 1em; font-size: 2em; font-weight: bold; color: #74b4cb;}
-.navbar img.brand-logo {height: 1em; vertical-align: text-top; margin: 2px 0 0;}
+.navbar img.brand-logo {height: 1em; vertical-align: text-top; margin: 2px 0 0 5px;}
 .flexslider {border-bottom: 0px;}
 .flexslider .slides .jumbotron-image img {width: auto; margin: 0 auto;}
 .service-image {}
